k8s/userprofile/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userprofile-ingress
  namespace: api
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: userprofile-service
                port:
                  number: 80
          - path: /api/docs/user
            pathType: Prefix
            backend:
              service:
                name: userprofile-service
                port:
                  number: 80
